--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
@@ -35,11 +36,14 @@
     "@trpc/server": "^11.0.0-rc.446",
     "@types/express": "^5.0.0",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
+    "cmdk": "^1.0.0",
+    "command": "^0.0.5",
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
+    "emblor": "^1.4.6",
     "express": "^4.21.1",
     "geist": "^1.3.0",
     "input-otp": "^1.2.4",
@@ -51,13 +55,17 @@
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.9",
     "react-hook-form": "^7.53.0",
+    "react-phone-number-input": "^3.4.9",
     "recharts": "^2.13.0",
     "reflect-metadata": "^0.2.2",
     "server-only": "^0.0.1",
+    "sonner": "^1.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "timescape": "^0.6.1",
     "typeorm": "^0.3.20",
     "vaul": "^1.1.0",
     "zod": "^3.23.8"
